hopefully fixes issue with rotation on Safari

--- a/app/assets/stylesheets/visualizations.css.scss
+++ b/app/assets/stylesheets/visualizations.css.scss
@@ -357,6 +357,7 @@ body[data-page-name='visualizations/show'] .visualizations-controller,
         transform:rotateX(180deg);
         -ms-transform:rotateX(180deg); /* IE 9 */
         -webkit-transform:rotateX(180deg); /* Safari and Chrome */
+        -webkit-transform-origin: 50%  51%;
       }
 
       .nav-tabs>li {
@@ -365,6 +366,7 @@ body[data-page-name='visualizations/show'] .visualizations-controller,
         transform:rotateX(180deg);
         -ms-transform:rotateX(180deg);
         -webkit-transform:rotateX(180deg);
+        -webkit-transform-origin: 50%  51%;
       }
       // End navigation tabs
 
